ELS Code/main/default/objects/GlobalSettings__c/GlobalSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>used to store IDs used for workflows, buttons, etc</description>
    <label>Global Settings</label>
</CustomObject>