ELS Code/main/default/objects/GlobalSettings__c/fields/CCManagerProfileID__c.field-meta.xml
<CustomField>
    <fullName>CCManagerProfileID__c</fullName>
    <description>call center manager profile id</description>
    <label>CCManagerProfileID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>