ELS Code/main/default/objects/GlobalSettings__c/fields/CustomerContactRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>CustomerContactRecordTypeID__c</fullName>
    <label>CustomerContactRecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>