ELS Code/main/default/objects/GlobalSettings__c/fields/Gen_Oppty_Loong__c.field-meta.xml
<CustomField>
    <fullName>Gen_Oppty_Loong__c</fullName>
    <label>Gen Oppty Loong</label>
    <length>18</length>
    <type>Text</type>
</CustomField>