ELS Code/main/default/objects/GlobalSettings__c/fields/GenericOpptyOwnerID__c.field-meta.xml
<CustomField>
    <fullName>GenericOpptyOwnerID__c</fullName>
    <label>GenericOpptyOwnerID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>