ELS Code/main/default/objects/GlobalSettings__c/fields/MembershipOpptyRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>MembershipOpptyRecordTypeId__c</fullName>
    <label>MembershipOpptyRecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>