ELS Code/main/default/objects/GlobalSettings__c/fields/OpportunityCheckinDateFieldId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCheckinDateFieldId__c</fullName>
    <label>OpportunityCheckinDateFieldId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>