ELS Code/main/default/objects/GlobalSettings__c/fields/OpportunityCheckOutDateFieldId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCheckOutDateFieldId__c</fullName>
    <label>OpportunityCheckOutDateFieldId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>