ELS Code/main/default/objects/GlobalSettings__c/fields/OpportunitySiteTypeFieldId__c.field-meta.xml
<CustomField>
    <fullName>OpportunitySiteTypeFieldId__c</fullName>
    <label>OpportunitySiteTypeFieldId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>