ELS Code/main/default/objects/GlobalSettings__c/fields/OpportunityTralierSizeFieldId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityTralierSizeFieldId__c</fullName>
    <label>OpportunityTralierSizeFieldId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>