ELS Code/main/default/objects/GlobalSettings__c/fields/OppportunityPropertyFieldID__c.field-meta.xml
<CustomField>
    <fullName>OppportunityPropertyFieldID__c</fullName>
    <label>OppportunityPropertyFieldID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>