ELS Code/main/default/objects/GlobalSettings__c/fields/OpptyContactFieldID__c.field-meta.xml
<CustomField>
    <fullName>OpptyContactFieldID__c</fullName>
    <label>OpptyContactFieldID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>