ELS Code/main/default/objects/GlobalSettings__c/fields/PropertyContactRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>PropertyContactRecordTypeID__c</fullName>
    <label>PropertyContactRecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>