ELS Code/main/default/objects/GlobalSettings__c/fields/RenewalOpptyRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>RenewalOpptyRecordTypeID__c</fullName>
    <label>RenewalOpptyRecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>