ELS Code/main/default/objects/GlobalSettings__c/fields/ReservationOpptyRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>ReservationOpptyRecordTypeID__c</fullName>
    <label>ReservationOpptyRecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>