ELS Code/main/default/objects/GlobalSettings__c/fields/ResProfileID__c.field-meta.xml
<CustomField>
    <fullName>ResProfileID__c</fullName>
    <label>ResProfileID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>