ELS Code/main/default/objects/GlobalSettings__c/fields/RVDOpptyCreateDays__c.field-meta.xml
<CustomField>
    <fullName>RVDOpptyCreateDays__c</fullName>
    <label>RVDOpptyCreateDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>