ELS Code/main/default/objects/GlobalSettings__c/fields/RVDOpptyRecordType__c.field-meta.xml
<CustomField>
    <fullName>RVDOpptyRecordType__c</fullName>
    <label>RVDOpptyRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>