ELS Code/main/default/objects/GlobalSettings__c/fields/SalesProfileID__c.field-meta.xml
<CustomField>
    <fullName>SalesProfileID__c</fullName>
    <label>SalesProfileID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>